<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical">

    <include layout="@layout/title" />


    <LinearLayout
        android:id="@+id/record_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/record_mode"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/isNeed_record_vol"
            android:textSize="18sp" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/idNeedVol"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_resolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/record_Resolution"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_frames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/record_Frames"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/record_Quality"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_bit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/record_Bitrate"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/record_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/record_time"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mirror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_mirror"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/device_gsensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/device_gsensor"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>