<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical">

    <include layout="@layout/title" />


    <LinearLayout
        android:id="@+id/photo_Brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_Brightness"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_Contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_Contrast"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_Hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_Hue"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_Saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_Saturation"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_Sharpness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_Sharpness"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/photo_frequency"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/VideoFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/VideoFormat"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>