<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/recording_setting"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setting_record" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/video_setting"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tack_photo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setting_video" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/photo_setting"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/device"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setting_device" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/device_setting"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setting_about" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/about_setting"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow" />
    </LinearLayout>

</LinearLayout>